# tune-manager

./: .eslintrc  .eslintrc.js  .flake8  .gitignore  .pdm.toml  Dockerfile  Makefile  Pipfile  README.md  dockerStart.sh  package.json  pyproject.toml  setup.cfg  tsconfig.json  webpack.config.js  webpack.config.ts
.github/workflows/: docker.yml
app/: App.js  fileLoader.d.ts  globalKeys.js  index.html  index.js  index.tsx
app/catalog/: index.js  index.tsx  types.tsx
app/catalog/components/: Artwork.js  Key.js  Key.tsx  Track.js  Track.tsx
app/components/: FieldHeadings.js  Save.js  ScrollLockList.js  TypeaheadInput.js  ValidationPopover.js
app/components/Fields/: Artwork.js  index.js
app/importer/: globalKeys.js  index.js  types.ts
app/importer/store/: actions.js  (+4 more)
app/scss/: _artwork.scss  _fields.scss  _grouping.scss  _header.scss  _importer.scss  _mixins.scss  _placeholders.scss  _typeahead.scss  _validation.scss  app.scss
app/store/: actions.js  index.js  sagas.js
app/util/: discogs.js  image.js  keyboard.js
app/validate/: artist.js  artwork.js  bpm.js  genre.js  index.js  release.js  remixer.js  title.js  track.js  year.js
interface/: .eslintrc  package-lock.json  package.json  webpack.config.js
interface/public/: index.html
interface/src/: App.js  App.scss  Fields.js  actions.js  globalKeys.js  index.js  sagas.js  store.js
tune_manager/: __init__.py  app.py  catalog.py  db.py  knowns.py  main.py  mediafile.py  settings.py
tune_manager/api/: catalog.py  importer.py
tune_manager/importer/: beatport.py  convert.py  filesystem.py
tune_manager/utils/: file.py  image.py  music_key.py  sync_bpm.py
tunes-manager/: catalog.py  db.py  knowns.py  main.py  mediafile.py
tunes-manager/importer/: beaport.py  beatport.py  convert.py  filesystem.py
tunes-manager/lookup/: beatport.py
tunes-manager/utils/: file.py  watchdog.py
(+101 files in other folders)
