[tool.poetry]
name = "tune-manager"
version = "0.1.0"
description = ""
authors = ["Evan Purkhiser <evanpurkhiser@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^1.2"
watchdog = "^0.9.0"
mutagen = "^1.42"
requests = "^2.21"
pillow = "^8.2"
sanic = "^20.6.3"
sanic-cors = "^0.9.7"
beautifulsoup4 = "^4.7"
keyfinder = "^1.1"
sentry_sdk = "^0.13.1"

[tool.poetry.scripts]
tunemanager= 'tune_manager:main'


[tool.poetry.dev-dependencies]
black = "^20.8b1"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
